#284: Fixed layout issue in Google Chrome

--- a/src/ReportGenerator.Core/Reporting/Builders/Rendering/resources/custom-azurepipelines.css
+++ b/src/ReportGenerator.Core/Reporting/Builders/Rendering/resources/custom-azurepipelines.css
@@ -9,10 +9,10 @@ a:hover { color: #000; text-decoration: underline; }
 h1 a { background-color: #e8e8e8; display: inline-block; margin: -12px 5px -10px -10px; padding: 10px; border-right: 1px solid #fff; }
 h1 a:hover { background-color: #ccc; text-decoration: none; }
 
-.container { margin: auto; background-color: #fff; display: table;  height: 100%; }
-.containerleft { display: table-cell; padding: 0 20px 20px 20px; }
-.containerright { border-left: solid 1px #EAEAEA; display: table-cell; width: 340px; min-width: 340px; background-color: #fff; height: 100%; }
-.containerrightfixed { position: fixed; padding: 0 20px 20px 20px; width: 300px; overflow-y: auto; height: 100%; top: 0; bottom: 0; }
+.container { margin: auto; background-color: #fff; display: flex; min-height: 100%; }
+.containerleft { padding: 0 20px 20px 20px; }
+.containerright { width: 340px; min-width: 340px; background-color: #fff; height: 100%; }
+.containerrightfixed { position: fixed; padding: 0 20px 20px 20px; border-left: solid 1px #EAEAEA; width: 300px; overflow-y: auto; height: 100%; top: 0; bottom: 0; }
 .containerrightfixed h1 { background-color: rgba(248,248,248,1); }
 .containerrightfixed label, .containerright a { white-space: nowrap; overflow: hidden; display: inline-block; width: 100%; max-width: 300px; text-overflow: ellipsis; }
 .containerright a { margin-bottom: 3px; }
